--- a/.github/workflows/covid-polls.yml
+++ b/.github/workflows/covid-polls.yml
@@ -28,11 +28,16 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.x'
+        
+    - uses: actions/cache@v2
+      with:
+       path: ${{ env.pythonLocation }}
+       key: ${{ env.pythonLocation }}-${{ hashFiles('requirements.txt') }}
+
+    
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-         pip install pandas
-         pip install addfips
+          pip install --upgrade --upgrade-strategy eager -r dev-requirements.txt -e .
     - name: transform
       run: |
        python data/fivethirtyeight/covid-19-polls/approval-polls/harvester.py
@@ -71,11 +76,15 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.x'
+    - uses: actions/cache@v2
+      with:
+       path: ${{ env.pythonLocation }}
+       key: ${{ env.pythonLocation }}-${{ hashFiles('requirements.txt') }}
+
+    
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-         pip install pandas
-         pip install addfips
+          pip install --upgrade --upgrade-strategy eager -r dev-requirements.txt -e .
     - name: transform
       run: |
        python data/fivethirtyeight/covid-19-polls/approval-polls-adjusted//harvester.py
