--- a/.github/workflows/covid-polls.yml
+++ b/.github/workflows/covid-polls.yml
@@ -31,8 +31,10 @@ jobs:
         
     - uses: actions/cache@v2
       with:
-       path: ${{ env.pythonLocation }}
-       key: ${{ env.pythonLocation }}-${{ hashFiles('requirements.txt') }}
+       path: ~/.cache/pip
+       key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+       restore-keys: |
+        ${{ runner.os }}-pip-
 
     
     - name: Install dependencies
@@ -78,8 +80,11 @@ jobs:
         python-version: '3.x'
     - uses: actions/cache@v2
       with:
-       path: ${{ env.pythonLocation }}
-       key: ${{ env.pythonLocation }}-${{ hashFiles('requirements.txt') }}
+       path: ~/.cache/pip
+       key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+       restore-keys: |
+        ${{ runner.os }}-pip-
+
 
     
     - name: Install dependencies
