--- a/.github/workflows/covid-polls.yml
+++ b/.github/workflows/covid-polls.yml
@@ -28,18 +28,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-        
-    - uses: actions/cache@v2
-      with:
-       path: ~/.cache/pip
-       key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-       restore-keys: |
-        ${{ runner.os }}-pip-
-
-    
     - name: Install dependencies
       run: |
-          pip install --upgrade --upgrade-strategy eager -r requirements.txt -e .
+        python -m pip install --upgrade pip
+         pip install pandas
+         pip install addfips
     - name: transform
       run: |
        python data/fivethirtyeight/covid-19-polls/approval-polls/harvester.py
@@ -78,18 +71,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - uses: actions/cache@v2
-      with:
-       path: ~/.cache/pip
-       key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-       restore-keys: |
-        ${{ runner.os }}-pip-
-
-
-    
     - name: Install dependencies
       run: |
-          pip install --upgrade --upgrade-strategy eager -r requirements.txt -e .
+        python -m pip install --upgrade pip
+         pip install pandas
+         pip install addfips
     - name: transform
       run: |
        python data/fivethirtyeight/covid-19-polls/approval-polls-adjusted//harvester.py
